# moria

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SYSTEM_DESIGN.md  docker-compose.yml
crates/backtest/: Cargo.toml
crates/backtest/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: auth.rs  config.rs  db.rs  grpc.rs  lib.rs  math.rs  migrate.rs  position.rs  retry.rs  signal.rs  telemetry.rs  types.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: bybit_ws.rs  main.rs  server.rs
crates/order/: Cargo.toml
crates/order/src/: bybit_rest.rs  main.rs  server.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/reconciler/: Cargo.toml
crates/reconciler/src/: main.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  db.rs  main.rs  server.rs  validator.rs  worker.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: engine.rs  main.rs  sma.rs  strategy.rs
migrations/: 001_initial.sql  002_daily_equity.sql  003_realized_pnl_and_indexes.sql  004_order_intents.sql  005_trade_reconciliation_index.sql  006_domain_events.sql  007_backtest_leaderboard.sql
proto/: market_data.proto  order.proto  risk.proto  strategy.proto
