[workspace]
members = [
    "crates/proto",
    "crates/common",
    "crates/market-data",
    "crates/strategy",
    "crates/order",
    "crates/risk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# gRPC / Protobuf
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing / OpenTelemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# Crypto (Bybit signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
