[package]
name = "moria-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
anyhow.workspace = true
