[package]
name = "moria-market-data"
version.workspace = true
edition.workspace = true

[dependencies]
moria-proto = { path = "../proto" }
moria-common = { path = "../common" }
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
anyhow.workspace = true
metrics.workspace = true
tonic-health.workspace = true
url = "2"
