[package]
name = "moria-order"
version.workspace = true
edition.workspace = true

[dependencies]
moria-proto = { path = "../proto" }
moria-common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
