[package]
name = "moria-strategy"
version.workspace = true
edition.workspace = true

[dependencies]
moria-proto = { path = "../proto" }
moria-common = { path = "../common" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
anyhow.workspace = true
metrics.workspace = true
